--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Chuck Norris Jokes</title>
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,900" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
